--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       const serverUrl = "https://sdf-lac.vercel.app/api/hello";
       const model = "text-davinci-";
       const openaiUrl = "https://api.openai.com/v1/chat/completions";
-      let apiKey = process.env.apikey;
+      let apiKey = "";
       let urls = [];
       
       const messages = [];
